# casper-rust-sdk

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: aarch64-darwin.yml  cctl.yml  x86_64-darwin.yml
crates/crypto/: README.md
crates/node-binary/: Cargo.toml  README.md
crates/node-binary/src/proxy/: config.rs  constants.rs
crates/node-rest/: Cargo.toml
crates/node-sse/: Cargo.toml  README.md
crates/node-sse/src/: client.rs  error.rs  lib.rs  mod.rs  proxy.rs  types.rs  typeset.rs
crates/sdk/: Cargo.toml
crates/tx-builder/: Cargo.toml  README.md
crates/typeset/: README.md
crates/typeset-utils/: Cargo.toml  README.md
crates/typeset-utils/src/: lib.rs
crates/typeset/src/: lib.rs
docs/notes/: api.md
src/: lib.rs
src/api/: mod.rs
src/api/jsonrpc/: mod.rs
src/api/node/: mod.rs
src/api/node/binary/: mod.rs
src/api/node/binary/client/: mod.rs
src/api/node/binary/proxy/: config.rs  mod.rs  proxy.rs
src/api/node/sse/: client.rs  client_core.rs  error.rs  mod.rs  types.rs
src/api/sidecar/: mod.rs
src/utils/factory/: mod.rs
tests/: sse_client.rs  sse_client_cctl.rs
tests/utils/: mod.rs
