[workspace]
resolver = "2"
members = [
    "crates/crypto",
    "crates/node-binary",
    "crates/node-sse",
    "crates/sdk",
    "crates/typeset",
    "crates/typeset-utils",
]

[workspace.package]
name = "casper-sdk-rs"
version = "0.1.0"
authors = ["Mark A. Greenslade <asladeofgreen@pm.me>"]
description = "Pure rust SDK for casper-node."
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/casper-network/casper-sdk-rs"

[workspace.dependencies]
casper-types = "4.0.1"
eventsource-stream = "0.2.3"
futures = "0.3.30"
hex = { version = "0.4.3", features = ["serde"] }
rand = "0.8.5"
proptest = { version = "1.5.0", features = ["attr-macro"] }
proptest-derive = "0.5.0"
reqwest = { version = "0.12.5", features = ["json", "stream"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_cbor = "0.11.2"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
