[workspace]
resolver = "2"
members = [
    "crates/crypto",
    "crates/node-binary",
    "crates/node-sse",
    "crates/sdk",
    "crates/typeset",
    "crates/typeset-utils",
    "hack",
]

[workspace.package]
name = "casper-sdk-rs"
version = "0.1.0"
authors = ["Mark A. Greenslade <asladeofgreen@pm.me>"]
description = "Pure rust SDK for casper-node."
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/casper-network/casper-sdk-rs"

[workspace.dependencies]
hex = { version = "0.4.3", features = ["serde"] }
proptest = "1.6.0"
proptest-derive = "0.5.1"
rand = "0.8.5"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
